testing fixed image on ios

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -341,6 +341,7 @@
         height: 50px;
       }
 
+      /* Sticky Nav */
       .stickynav header, .stickynav nav {
         transition: all 300ms ease-in-out;
       }
@@ -356,7 +357,26 @@
 
       .nav-transition {
         transition: all 2s ease-in-out;
-    
+      }
+
+      /* Fixed Image fix for iOs */
+      .fixed-bg {
+        position: relative;
+        overflow: hidden;
+      }
+      
+      .fixed-bg::before {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('/OOT-many-moons-compressed.jpeg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        z-index: -1;
       }
           
   }
